feat(case-modal): integrate backend to allow case generation from files
